@@ -23,8 +23,8 @@ Requirements
    (non-headless)
 
 2) A file browser: Caja, Dolphin, elementary Files, GNOME Nautilus (Files),
-   Konqueror, Krusader, muCommander, Nemo, ROX-Filer, SpaceFM, Thunar, Xfe,
-   and zzzFM are supported
+   Konqueror, Krusader, muCommander, Nemo, PCManFM, PCManFM-Qt, ROX-Filer,
+   SpaceFM, Thunar, Xfe, and zzzFM are supported
 
 3) A complete Java Runtime Environment (JRE) or Java Developement Kit (JDK)
    with graphical libraries.
