@@ -1,6 +1,8 @@
 Release Notes
 -------------
 2.8.0, Apr 12, 2024
+- added support for KDE 6
+- added support for PCManFM and PCManFM-Qt
 - bug fix: line 1522: too many arguments (regression was introduced in 2.6.0)
 - disabled shellcheck warnings for $f evaluation because it is a literal used by muCommander
 - refactored the code a little
